--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!doctype html>
 <html lang="ko">
 <head>
@@ -6,13 +8,23 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>장고 프로젝트</title>
+
+
 </head>
-<body>
+<body hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'>
     <h1>장고 프로젝트</h1>
     {% block content %}
 
     {% endblock %}
     <hr>
     &copy; 파이썬 사랑방
+
+    {% if debug %}
+        <script src="{% static "htmx/1.9.11/htmx.js" %}"></script>
+    {% else %}
+        <script src="{% static "htmx/1.9.11/htmx.min.js" %}"></script>
+    {% endif %}
+    <script src="{% static 'htmx/ext/hx-get-with-timestamp.js' %}"></script>
+
 </body>
 </html>
