--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -25,6 +25,8 @@
         <script src="{% static "htmx/1.9.11/htmx.min.js" %}"></script>
     {% endif %}
     <script src="{% static 'htmx/ext/hx-get-with-timestamp.js' %}"></script>
-
+    <script src="{% static "toast-messages.js" %}"></script>
+    
+    {% include "_messages_as_toast.html" %}
 </body>
 </html>
