#14. bootstrap5 - 헤더 레이아웃

--- a/core/templates/root.html
+++ b/core/templates/root.html
@@ -3,5 +3,5 @@
 
 {% block content %}
     root.html
-    {% component "modal-form"  %} {% endcomponent %}
+{#    {% component "modal-form"  %} {% endcomponent %}#}
 {% endblock %}
