#17. crispy-forms 활용한 폼레이아웃

--- a/core/templates/crispy_form.html
+++ b/core/templates/crispy_form.html
@@ -2,5 +2,5 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-    {% crispy form %}
+    {% include "_crispy_form.html" with form=form form_title=form_title %}
 {% endblock %}
