--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -34,7 +34,7 @@
                 <a href="{% url 'accounts:login' %}" class="btn btn-outline-light me-2">로그인</a>
                 <a href="#" class="btn btn-warning">회원가입</a>
             {% else %}
-                <a href="#" class="btn btn-outline-light me-2">프로필</a>
+                <a href="{% url 'accounts:profile' %}" class="btn btn-outline-light me-2">프로필</a>
                 <a href="#" class="btn btn-warning">로그아웃</a>
             {% endif %}
         </div>
