--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -35,7 +35,10 @@
                 <a href="#" class="btn btn-warning">회원가입</a>
             {% else %}
                 <a href="{% url 'accounts:profile' %}" class="btn btn-outline-light me-2">프로필</a>
-                <a href="#" class="btn btn-warning">로그아웃</a>
+                <a hx-post="{% url 'accounts:logout' %}"
+                   hx-target="body"
+                   hx-push-url="true"
+                   class="btn btn-warning">로그아웃</a>
             {% endif %}
         </div>
       </div>
