--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -32,7 +32,7 @@
         <div class="text-end">
             {% if not user.is_authenticated %}
                 <a href="{% url 'accounts:login' %}" class="btn btn-outline-light me-2">로그인</a>
-                <a href="#" class="btn btn-warning">회원가입</a>
+                <a href="{% url 'accounts:signup' %}" class="btn btn-warning">회원가입</a>
             {% else %}
                 <a href="{% url 'accounts:profile' %}" class="btn btn-outline-light me-2">프로필</a>
                 <a hx-post="{% url 'accounts:logout' %}"
